# remote-mouse

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_ZH.md  requirement.md  requirement_v2.md
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  release.yml
docs/: README_ZH.md
mobile/: pubspec.yaml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
requirement/: todo.md  v1.md  v2.md  v3_1.md  v3_2.md  v3_3.md  v4.md  v4_rust_refactor.md
server/: .gitignore  Cargo.toml  build.rs  main.py  pyproject.toml  tauri.conf.json  test_connection.py
server-py/src/server/: config.py  main.py
server-py/src/server/services/: mdns.py
server-py/src/tests/: conftest.py  test_connection.py  test_tray.py
server/assets/: icon.icns
server/src/: main.rs
server/src/core/: mod.rs  protocol.rs
server/src/server/: config.py  main.py  mdns.py  protocol.py  web_server.py
server/src/server/core/: metrics.py  protocol.py
server/src/server/services/: manager.py  mdns.py  web.py
server/src/server/ui/: tray_icon.py
server/src/services/: input.rs  mdns.rs  mod.rs  web.rs
server/src/tests/: conftest.py  test_config.py  test_mdns.py  test_tray.py  test_web_service.py
server/src/ui/: mod.rs  tray.rs
web-client/: index.html  package-lock.json  package.json  vite.config.ts
web-client/src/: main.ts  style.css
web-client/src/core/: i18n.ts  protocol.ts  transport.ts
web-client/src/input/: keyboard.ts  scroll-strip.ts  touchpad.ts
web-client/src/lang/: en.ts  zh.ts
web-client/src/ui/: settings.ts  status-bar.ts
web-client/tests/: scroll-strip.test.ts  touchpad.test.ts  transport.test.ts
