[package]
name = "remote-mouse"
version = "4.0.0"
edition = "2021"

[dependencies]
# 异步运行时与 Web 服务
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["fs", "cors"] }

# 输入控制 (核心重构目标)
enigo = { version = "0.3.0" }

# 服务发现 (mDNS)
mdns-sd = "0.13.2"

# 静态资源打包 (将前端编译进单文件)
rust-embed = { version = "8.6.0", features = ["axum"] }
mime_guess = "2.0.5"

# 网络工具
local-ip-address = "0.6.3"

# 二进制协议处理
bytes = "1.10.0"
byteorder = "1.5.0"

# 日志与工具
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri = { version = "2.1.0", features = ["tray-icon"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
